add 医生+科室
