# docs/swagger.json
@@ -4,6 +4,16 @@
         "contact": {}
     },
     "paths": {
+        "/api/departmentList": {
+            "get": {
+                "description": "获取科室列表",
+                "tags": [
+                    "科室"
+                ],
+                "summary": "获取科室列表",
+                "responses": {}
+            }
+        },
         "/api/getRecordByMedic": {
             "get": {
                 "description": "获取医生挂号记录",
@@ -138,6 +148,15 @@
                         }
                     }
                 }
+            }
+        },
+        "/api/meidcList": {
+            "post": {
+                "tags": [
+                    "医生"
+                ],
+                "summary": "获取医生列表",
+                "responses": {}
             }
         },
         "/api/register": {
